--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,10 @@
         "psr-4": {
             "rus\\testPackage\\": "src/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.2-dev"
+        }
     }
 }
